# GunsAndZombies

./: .gitignore  BuildProject.bat  CMakeLists.txt  CompileProject.bat  README.md
Client/: CMakeLists.txt  config.h.in
Client/Source/Components/: Components.cpp  Components.h
Client/Source/Core/: Client.cpp  Client.h  Config.h  Constants.h  EntryPoint.cpp  EntryPoint.h
Client/Source/Interfaces/: IComponent.h  IScene.h  ISystem.h
Client/Source/Managers/: SceneManager.cpp  SceneManager.h
Client/Source/Network/: ClientNetwork.cpp  ClientNetwork.h
Client/Source/Scenes/: GamePlayScene.cpp  GamePlayScene.h  GameScene.cpp  GameScene.h  LobbyScene.cpp  LobbyScene.h  MainMenuScene.cpp  MainMenuScene.h
Client/Source/Systems/: InputSystem.cpp  InputSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  Systems.h
Common/Source/Components/: Components.h  HealthComponent.h  InputComponent.cpp  InputComponent.h  PhysicsComponent.h  SpriteComponent.h  TransformComponent.h
Common/Source/Core/: Core.h  Utility.h
Common/Source/Interfaces/: IComponent.h  INetwork.cpp  INetwork.h  IScene.cpp  IScene.h  ISystem.h
Common/Source/Managers/: EventSystem.cpp  EventSystem.h  NetworkManager.cpp  NetworkManager.h  SceneManager.cpp  SceneManager.h
Common/Source/Network/: NetworkProtocol.h
Common/Source/Systems/: InputSystem.cpp  InputSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  Systems.h
Server/: CMakeLists.txt
Server/Source/Core/: EntryPoint.cpp  EntryPoint.h  Server.cpp  Server.h
Server/Source/Network/: ServerNetwork.cpp  ServerNetwork.h
